# backtrader

./: .gitignore  CLAUDE.md  DNTi  Makefile  README.md  README.rst  Tradingrobot  backTrader(30 day SMA)_bt.py  pyproject.toml  vectar
.codeboarding/: Analyzer.md  Broker.md  Cerebro.md  Data_Feed.md  Indicator.md  Strategy.md  on_boarding.md
backtrader/: __init__.py  analyzer.py  broker.py  cerebro.py  comminfo.py  feed.py  fillers.py  flt.py  indicator.py  linebuffer.py  lineiterator.py  lineroot.py  lineseries.py  metabase.py  observer.py  option.py  optioncommission.py  optionpricing.py  optionstrategy.py  order.py  resamplerfilter.py  sizer.py  store.py  strategy.py  talib.py  timer.py  tradingcal.py  types.py  writer.py
backtrader-development/tools/: dipbuy_scan.py  event_miner_v2.py  xauusd_miner_ohlc_first_hit_pessimistic.py  xauusd_rule_audit.py  xauusd_rule_recheck.py  xauusd_step1.py
backtrader/brokers/: ibbroker.py  oandabroker.py  optionbroker.py  vcbroker.py
backtrader/feeds/: chainer.py  ibdata.py  oanda.py  optiondata.py  rollover.py  vcdata.py  vchartfile.py
backtrader/filters/: bsplitter.py  calendardays.py  session.py
backtrader/indicators/: __init__.py  mabase.py
backtrader/observers/: trades.py
backtrader/stores/: ibstore.py  oandastore.py  vchartfile.py
backtrader/utils/: __init__.py  dateintern.py  py3.py
examples/: typing_demo.py
samples/msft-put-selling/: msft-put-selling.py
samples/options-covered-call/: options-covered-call.py
samples/options-simple-example/: simple-options.py
samples/options-test/: README.md  options-test.py
samples/tradingcalendar/: tcal.py
tests/: test_options.py
tools/: xauusd_debug_prefilter_ranklists.py  xauusd_feature_binning.py  xauusd_feature_extract.py  xauusd_miner_ohlc_first_hit_pessimistic.py  xauusd_optimize_miner.py  xauusd_prefilter_in_detail.py  xauusd_regime_visualize.py  xauusd_rule_audit.py  yahoodownload.py
tools/tools/: xauusd_feature_extract.py  xauusd_feature_extract_alt.py  xauusd_feature_extract_patched.py  xauusd_feature_sanity.py  xauusd_miner_ohlc_first_hit_pessimistic_multitp_trail_ev.py  xauusd_optimize.py  xauusd_optimize_miner.py  xauusd_run_optimizer_miner.py  xauusd_signal_excursion_stats.py
